k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: next-service
spec:
  type: ClusterIP
  selector:
    app: next-app
  ports:
    - port: 3000
      targetPort: 3000
